[package]
name = "natatorium"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

[dependencies]

[features]
default = ["std"]
std = []

[dev-dependencies]
loom = { version = "0.2", git = "https://github.com/carllerche/loom" }
criterion = "0.2"
pool = "0.1"

[[bench]]
name = "fixed"
harness = false
